--- a/docs/locale/ru/LC_MESSAGES/about/index.po
+++ b/docs/locale/ru/LC_MESSAGES/about/index.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-01 11:07+0100\n"
+"POT-Creation-Date: 2019-09-07 15:29+0000\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
 "Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2019\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
@@ -22,12 +22,12 @@ msgstr ""
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
-# dda0b2ca56674e7eb1c962c950d48502
+# b25a5fc33ec64d3693aa1adf1fa2816a
 #: ../../about/index.rst:2
 msgid "About"
 msgstr "О Стандарте"
 
-# 11d2bed141ca43beb55391a3ba78231f
+# 1f7582f351404c70b369829a8b94d0ad
 #: ../../about/index.rst:4
 msgid ""
 "This website contains the draft specification of the Beneficial Ownership "
@@ -40,8 +40,13 @@ msgstr ""
 "Стандартом предусмотрен структурированный шаблон для описания бенефициарного"
 " владения в виде машиночитаемых данных."
 
-# f84966956805405c90a00764ef990e7c
-#: ../../about/index.rst:13
+# ab8f688c172240fc85778a2c3b67febe
+#: ../../about/index.rst:9
+msgid "Background"
+msgstr ""
+
+# 5f98163f0eb7486188f0d9a84b81f82a
+#: ../../about/index.rst:12
 msgid ""
 "Money laundering, tax evasion and obscure chains of ownership are "
 "transnational problems that require a transnational solution. Civil society,"
@@ -54,8 +59,8 @@ msgstr ""
 "все могут получить выгоду от более высокого уровня прозрачности в отношении "
 ":ref:`бенефициарного владения<what-is-bo>`."
 
-# 9ed0b3fe19314c9b88caf9f0fc9bd84c
-#: ../../about/index.rst:15
+# 7eb879e1c9bc4ed19e3af8939223cda8
+#: ../../about/index.rst:14
 msgid ""
 "The Beneficial Ownership Data Standard enables this transparency by "
 "providing a solid conceptual and practical framework for collecting and "
@@ -68,8 +73,8 @@ msgstr ""
 " которые более интероперабельны, характеризуются большей простотой "
 "повторного использования и более высоким качеством."
 
-# 4dcb29d148bf49249a7bb6fd180f5b54
-#: ../../about/index.rst:17
+# a9f64f1ca06d4f919ee7f70da3efd440
+#: ../../about/index.rst:16
 msgid ""
 "The Standard is being developed under the guidance of a :doc:`working group "
 "<governance>` co-chaired by OpenOwnership. More details about the "
@@ -79,8 +84,13 @@ msgstr ""
 "группы<governance>` в сопредседательстве с OpenOwnership. Дополнительная "
 "информация об этой организации доступна по адресу www.openownership.org.\""
 
-# b087ec01c1504133bfc0b5d7c6ebfe1c
-#: ../../about/index.rst:29
+# 5dfafd71de4b4ec186211a9b7b7fd881
+#: ../../about/index.rst:21
+msgid "Current status of the standard"
+msgstr ""
+
+# 97801094d755465f92699673b665a14f
+#: ../../about/index.rst:26
 msgid ""
 "This is v0.2 of the Beneficial Ownership Data Standard. The data model has "
 "been updated and additional codelist information added since v0.1."
@@ -89,8 +99,8 @@ msgstr ""
 "версией 0.1 была обновлена модель данных и добавлена дополнительная "
 "информация из списка допустимых значений."
 
-# 3b3ed16d8baa4b538ad941d3d612f0ec
-#: ../../about/index.rst:32
+# c164bf78ddd04a2c8609380b03ea770b
+#: ../../about/index.rst:29
 msgid ""
 "Implementers should be aware that future changes are anticipated, before a "
 "version 1.0 release. However, from the v0.1 release onwards, any structural "
@@ -105,8 +115,8 @@ msgstr ""
 "изменений<changelog>`, при этом документирование предыдущих версий ведется в"
 " форме архива."
 
-# 1e15a5319ef04ca8afede073db0f8de9
-#: ../../about/index.rst:39
+# 85756ec5417e4d2bbc329f01771e18d7
+#: ../../about/index.rst:36
 msgid ""
 "The schema contains a structure, fields and codelists but does not yet "
 "enforce validation constraints on most fields."
@@ -114,8 +124,13 @@ msgstr ""
 "Схема содержит структуру, поля и списки допустимых значений, но в ней еще не"
 " учтены ограничения в отношении валидации по большинству полей."
 
-# 2d2c02c4d68741c4a52b1f3239dcc92c
-#: ../../about/index.rst:48
+# 8e07ce6390fe4ecf97a921fd9681b184
+#: ../../about/index.rst:41
+msgid "Get involved"
+msgstr ""
+
+# 0ea44d43df29461eba7d77a22ac02b04
+#: ../../about/index.rst:43
 msgid ""
 "All changes to the standard draft, documentation and specification take "
 "place via GitHub at https://github.com/openownership/data-standard/."
@@ -124,8 +139,8 @@ msgstr ""
 "осуществляется через GitHub по адресу https://github.com/openownership/data-"
 "standard/."
 
-# 2d2c02c4d68741c4a52b1f3239dcc92c
-#: ../../about/index.rst:51
+# f1da8ca4afa64d46b422d44a7e45d563
+#: ../../about/index.rst:46
 msgid ""
 "Suggestions for changes can be made via the `project issue tracker "
 "<https://github.com/openownership/data-standard/issues>`__."
@@ -134,8 +149,8 @@ msgstr ""
 "отслеживания ошибок проекта<https://github.com/openownership/data-"
 "standard/issues>`__."
 
-# 025c21a21fda4916aede2d4faa85de84
-#: ../../about/index.rst:54
+# fe6c596a0abb4860a087a28089a86e09
+#: ../../about/index.rst:49
 msgid ""
 "If you would like to be involved in the development and review of the "
 "Standard, see the :doc:`Governance <governance>` page."
@@ -143,8 +158,13 @@ msgstr ""
 "Если вам хотелось бы участвовать в разработке и анализе Стандарта, см. "
 ":doc:`страницу «Управление»<governance>`."
 
-# 960272634171485e95bd4cdf5a029092
-#: ../../about/index.rst:72
+# 5bcd641b24884ee1b41b05fab0d9e461
+#: ../../about/index.rst:63
+msgid "Partners and funders"
+msgstr ""
+
+# 29ca9f87f4fc46aeaf0f0ff14a26105c
+#: ../../about/index.rst:65
 msgid ""
 "The initial development of the Beneficial Ownership Data Standard was funded"
 " by OpenOwnership as part of a UK Department for International Development "
@@ -169,8 +189,8 @@ msgstr ""
 "<https://www.globalwitness.org/en-gb/>`__ и `The B Team "
 "<http://bteam.org/>`__."
 
-# 1e2a6f2c51594139a7c2b4ac78855112
-#: ../../about/index.rst:83
+# 1c0892ebe6604bbeb23aa8a7dc79ed11
+#: ../../about/index.rst:76
 msgid ""
 "The specification and documentation have been developed by `Open Data "
 "Services Co-operative <http://www.opendataservices.coop>`__ and "
@@ -183,8 +203,13 @@ msgstr ""
 ":doc:`авторах<credits>` для получения подробной информации о разработчиках "
 "Стандарта."
 
-# e786969986c54ffd93c453d290aa6ab6
-#: ../../about/index.rst:94
+# 7181ac99734e4c38b1a0008b9c62dcff
+#: ../../about/index.rst:83
+msgid "License and contributor agreement"
+msgstr ""
+
+# 521acbbfa66c4fdbab4636707c460f87
+#: ../../about/index.rst:85
 msgid ""
 "Schema contents of the OpenOwnership Register are Copyright 2016 World Wide "
 "Web Foundation on behalf of the OpenOwnership Steering Group."
@@ -192,13 +217,13 @@ msgstr ""
 "Содержимое схемы Реестра OpenOwnership защищено авторским правом фонда World"
 " Wide Web Foundation от 2016 г. от имени Руководящей группы OpenOwnership."
 
-# 0ab9c56da15641e0b9b82d54b947e23e
-#: ../../about/index.rst:97
+# 797c833096a145baa2ac6c61ae2ab2c2
+#: ../../about/index.rst:88
 msgid "The schema is licensed under the Apache License, Version 2.0."
 msgstr "На схему распространяется действие Лицензии Apache, версия 2.0."
 
-# eb73b7356ae64a4b9a5ebdc630d1975b
-#: ../../about/index.rst:99
+# 8a3d2ba06c784738b9d4624e9b9f0a8d
+#: ../../about/index.rst:90
 msgid ""
 "Contributors are required to accept the `contributor agreement "
 "<https://github.com/openownership/data-"
@@ -208,8 +233,13 @@ msgstr ""
 "<https://github.com/openownership/data-"
 "standard/blob/master/CONTRIBUTING.md>`__.."
 
-# 8bf066aa21d245339c18e2379c5687b5
-#: ../../about/index.rst:108
+# d2e9d36247bb4f6a91332ff8810310e0
+#: ../../about/index.rst:95
+msgid "Contact"
+msgstr ""
+
+# 4e75875df4a045c4adf57ad37359447d
+#: ../../about/index.rst:97
 msgid ""
 "For more details about OpenOwnership, please email "
 "support@openownership.org."
